[package]
name = "egui_skia"
version = "0.4.992"
edition = "2021"
description = "egui_skia is a skia integration for the egui ui library. Render egui within a skia application or render skia in a egui application."
license = "MIT"
homepage = "https://github.com/lucasmerlin/egui_skia"
repository = "https://github.com/lucasmerlin/egui_skia"
keywords = ["skia", "egui", "skia-safe", "gui"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["cpu_fix"]
cpu_fix = []

[profile.dev]
opt-level = 3

[dependencies]

egui = ">=0.32.3"
skia-safe = { version = ">=0.88.0", features = [] }

